[gd_scene load_steps=19 format=2]

[ext_resource path="res://scenes/MainScene.gd" type="Script" id=1]
[ext_resource path="res://assets/tiledbg.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/Merienda-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/MainMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/LevelSelectMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/audio/music/One Man Symphony - Royalty Free Soundtrack Collection - 74 Happy Memories.mp3" type="AudioStream" id=6]
[ext_resource path="res://resources/cats_theme.tres" type="Theme" id=7]

[sub_resource type="Gradient" id=4]
resource_local_to_scene = true
interpolation_mode = 2
colors = PoolColorArray( 0.3, 0.12, 0.3, 1, 0.301961, 0.105882, 0.301961, 0 )

[sub_resource type="GradientTexture2D" id=5]
resource_local_to_scene = true
gradient = SubResource( 4 )
fill_to = Vector2( -0.5, 0 )
repeat = 2

[sub_resource type="DynamicFont" id=6]
resource_local_to_scene = true
size = 60
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
resource_local_to_scene = true
size = 60
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="TileSet" id=1]
0/name = "tiledbg.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 256, 256 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 511, Vector2( 0, 1 ), 511, Vector2( 1, 0 ), 511, Vector2( 1, 1 ), 511 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 128, 128 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Camera2D:zoom")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/MainMenu/HBoxContainer:anchor_left")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.5 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer/MainMenu/HBoxContainer:anchor_right")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.5 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CanvasLayer/MainMenu/HBoxContainer:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("CanvasLayer/LevelSelectMenu:anchor_left")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.5 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("CanvasLayer/LevelSelectMenu:anchor_right")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.5 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("CanvasLayer/MainMenu:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("CanvasLayer/LevelSelectMenu:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("CanvasLayer/LevelSelectMenu:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=7]
resource_name = "out"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/MainMenu/HBoxContainer:anchor_left")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.5, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/MainMenu/HBoxContainer:anchor_right")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.5, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/MainMenu/HBoxContainer:modulate")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/LevelSelectMenu:anchor_left")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.5 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer/LevelSelectMenu:anchor_right")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.5 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CanvasLayer/MainMenu:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("CanvasLayer/LevelSelectMenu:modulate")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("CanvasLayer/LevelSelectMenu:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "start"
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4, 7, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 832, 384 ), Vector2( 992, 128 ), Vector2( 560, 16 ), Vector2( 824, 1040 ), Vector2( 832, 384 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera2D:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 4, 7, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 6.2, -20.2, 2.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Camera2D:zoom")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 4, 10 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.8, 0.8 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Camera2D:zoom")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/MainMenu/HBoxContainer:anchor_left")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.5 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer/MainMenu/HBoxContainer:anchor_right")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.5 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CanvasLayer/MainMenu/HBoxContainer:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("CanvasLayer/LevelSelectMenu:anchor_left")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.5 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("CanvasLayer/LevelSelectMenu:anchor_right")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.5 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("CanvasLayer/MainMenu:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("CanvasLayer/LevelSelectMenu:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("CanvasLayer/LevelSelectMenu:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=10]
resource_name = "out"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/MainMenu/HBoxContainer:anchor_left")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.5, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/MainMenu/HBoxContainer:anchor_right")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.5, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/MainMenu/HBoxContainer:modulate")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/LevelSelectMenu:anchor_left")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.5 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer/LevelSelectMenu:anchor_right")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.5 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CanvasLayer/MainMenu:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("CanvasLayer/LevelSelectMenu:modulate")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("CanvasLayer/LevelSelectMenu:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=11]
resource_name = "start"
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4, 7, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 832, 384 ), Vector2( 992, 128 ), Vector2( 560, 16 ), Vector2( 824, 1040 ), Vector2( 832, 384 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera2D:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 4, 7, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 6.2, -20.2, 2.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Camera2D:zoom")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 4, 10 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.8, 0.8 ), Vector2( 1, 1 ) ]
}

[node name="MainScene" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" parent="CanvasLayer" instance=ExtResource( 4 )]
unique_name_in_owner = true
visible = true

[node name="TextureRect" parent="CanvasLayer/MainMenu" index="0"]
texture = SubResource( 5 )

[node name="Paused" parent="CanvasLayer/MainMenu/HBoxContainer" index="0"]
custom_fonts/font = SubResource( 6 )

[node name="ResumeButton" parent="CanvasLayer/MainMenu/HBoxContainer" index="2"]
focus_neighbour_top = NodePath("../../../MarginContainer/LangOption")

[node name="RestartButton" parent="CanvasLayer/MainMenu/HBoxContainer" index="4"]
margin_right = 300.0

[node name="AudioStreamPlayer" parent="CanvasLayer/MainMenu" index="3"]
bus = "Master"

[node name="LevelSelectMenu" parent="CanvasLayer" instance=ExtResource( 5 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -832.0
margin_top = -384.0
margin_right = 832.0
margin_bottom = 384.0

[node name="Title" parent="CanvasLayer/LevelSelectMenu/VBox" index="0"]
custom_fonts/font = SubResource( 8 )

[node name="VBoxContainer" parent="CanvasLayer/LevelSelectMenu/VBox/ScrollContainer" index="0"]
margin_right = 400.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -170.0
margin_bottom = 115.0
grow_horizontal = 0
mouse_filter = 2
theme = ExtResource( 7 )
custom_constants/margin_right = 50
custom_constants/margin_top = 50

[node name="LangOption" type="OptionButton" parent="CanvasLayer/MarginContainer"]
unique_name_in_owner = true
margin_top = 50.0
margin_right = 120.0
margin_bottom = 115.0
rect_min_size = Vector2( 120, 0 )
focus_neighbour_bottom = NodePath("../../MainMenu/HBoxContainer/ResumeButton")
action_mode = 1
text = "en"
align = 2
items = [ "en", null, false, 0, null, "pt_BR", null, false, 1, null ]
selected = 0

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 128, 128 )
format = 1
tile_data = PoolIntArray( -262150, 0, 0, -262149, 0, 0, -262148, 0, 0, -262147, 0, 0, -262146, 0, 0, -262145, 0, 0, -327680, 0, 0, -327679, 0, 0, -327678, 0, 0, -327677, 0, 0, -327676, 0, 0, -327675, 0, 0, -327674, 0, 0, -327673, 0, 0, -327672, 0, 0, -327671, 0, 0, -327670, 0, 0, -327669, 0, 0, -327668, 0, 0, -327667, 0, 0, -327666, 0, 0, -327665, 0, 0, -327664, 0, 0, -327663, 0, 0, -327662, 0, 0, -196614, 0, 0, -196613, 0, 65536, -196612, 0, 65536, -196611, 0, 0, -196610, 0, 1, -196609, 0, 65536, -262144, 0, 65536, -262143, 0, 65537, -262142, 0, 65536, -262141, 0, 65537, -262140, 0, 0, -262139, 0, 1, -262138, 0, 65536, -262137, 0, 65536, -262136, 0, 65537, -262135, 0, 65536, -262134, 0, 65536, -262133, 0, 65537, -262132, 0, 0, -262131, 0, 0, -262130, 0, 0, -262129, 0, 0, -262128, 0, 0, -262127, 0, 65536, -262126, 0, 0, -131078, 0, 0, -131077, 0, 1, -131076, 0, 1, -131075, 0, 0, -131074, 0, 0, -131073, 0, 1, -196608, 0, 65537, -196607, 0, 1, -196606, 0, 65537, -196605, 0, 1, -196604, 0, 1, -196603, 0, 0, -196602, 0, 65537, -196601, 0, 0, -196600, 0, 65536, -196599, 0, 1, -196598, 0, 65537, -196597, 0, 65537, -196596, 0, 65537, -196595, 0, 1, -196594, 0, 65536, -196593, 0, 0, -196592, 0, 1, -196591, 0, 65537, -196590, 0, 0, -65542, 0, 0, -65541, 0, 65536, -65540, 0, 1, -65539, 0, 0, -65538, 0, 65537, -65537, 0, 65537, -131072, 0, 0, -131071, 0, 1, -131070, 0, 1, -131069, 0, 65536, -131068, 0, 65536, -131067, 0, 65537, -131066, 0, 0, -131065, 0, 1, -131064, 0, 0, -131063, 0, 0, -131062, 0, 65536, -131061, 0, 0, -131060, 0, 0, -131059, 0, 65536, -131058, 0, 65537, -131057, 0, 0, -131056, 0, 0, -131055, 0, 65536, -131054, 0, 0, -6, 0, 0, -5, 0, 65536, -4, 0, 1, -3, 0, 65536, -2, 0, 65537, -1, 0, 1, -65536, 0, 1, -65535, 0, 0, -65534, 0, 65536, -65533, 0, 65536, -65532, 0, 65537, -65531, 0, 0, -65530, 0, 65536, -65529, 0, 1, -65528, 0, 65536, -65527, 0, 65536, -65526, 0, 65537, -65525, 0, 65537, -65524, 0, 65536, -65523, 0, 65537, -65522, 0, 1, -65521, 0, 65537, -65520, 0, 65537, -65519, 0, 1, -65518, 0, 0, 65530, 0, 0, 65531, 0, 65537, 65532, 0, 1, 65533, 0, 65536, 65534, 0, 65537, 65535, 0, 0, 0, 0, 1, 1, 0, 0, 2, 0, 1, 3, 0, 65536, 4, 0, 0, 5, 0, 0, 6, 0, 65537, 7, 0, 65536, 8, 0, 0, 9, 0, 65536, 10, 0, 65536, 11, 0, 65537, 12, 0, 65537, 13, 0, 65536, 14, 0, 1, 15, 0, 1, 16, 0, 65536, 17, 0, 0, 18, 0, 0, 131066, 0, 0, 131067, 0, 65537, 131068, 0, 65536, 131069, 0, 0, 131070, 0, 0, 131071, 0, 0, 65536, 0, 65536, 65537, 0, 0, 65538, 0, 0, 65539, 0, 65536, 65540, 0, 1, 65541, 0, 65537, 65542, 0, 1, 65543, 0, 1, 65544, 0, 65536, 65545, 0, 65537, 65546, 0, 65537, 65547, 0, 1, 65548, 0, 65536, 65549, 0, 0, 65550, 0, 1, 65551, 0, 65537, 65552, 0, 65537, 65553, 0, 0, 65554, 0, 0, 196602, 0, 0, 196603, 0, 65537, 196604, 0, 0, 196605, 0, 65537, 196606, 0, 0, 196607, 0, 65536, 131072, 0, 65536, 131073, 0, 65537, 131074, 0, 65537, 131075, 0, 0, 131076, 0, 65536, 131077, 0, 0, 131078, 0, 65536, 131079, 0, 65536, 131080, 0, 1, 131081, 0, 1, 131082, 0, 1, 131083, 0, 0, 131084, 0, 65537, 131085, 0, 0, 131086, 0, 1, 131087, 0, 1, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 262138, 0, 0, 262139, 0, 65537, 262140, 0, 1, 262141, 0, 1, 262142, 0, 65537, 262143, 0, 0, 196608, 0, 65536, 196609, 0, 1, 196610, 0, 65537, 196611, 0, 65537, 196612, 0, 1, 196613, 0, 65537, 196614, 0, 0, 196615, 0, 65537, 196616, 0, 0, 196617, 0, 65536, 196618, 0, 65537, 196619, 0, 1, 196620, 0, 0, 196621, 0, 65537, 196622, 0, 1, 196623, 0, 1, 196624, 0, 0, 196625, 0, 1, 196626, 0, 0, 327674, 0, 0, 327675, 0, 65537, 327676, 0, 0, 327677, 0, 1, 327678, 0, 65537, 327679, 0, 65536, 262144, 0, 65536, 262145, 0, 65536, 262146, 0, 1, 262147, 0, 65537, 262148, 0, 1, 262149, 0, 65537, 262150, 0, 65537, 262151, 0, 1, 262152, 0, 1, 262153, 0, 1, 262154, 0, 65536, 262155, 0, 0, 262156, 0, 0, 262157, 0, 65536, 262158, 0, 65536, 262159, 0, 0, 262160, 0, 65537, 262161, 0, 65537, 262162, 0, 0, 393210, 0, 0, 393211, 0, 1, 393212, 0, 65537, 393213, 0, 65536, 393214, 0, 65537, 393215, 0, 1, 327680, 0, 65537, 327681, 0, 65537, 327682, 0, 65537, 327683, 0, 1, 327684, 0, 65536, 327685, 0, 65537, 327686, 0, 1, 327687, 0, 65537, 327688, 0, 1, 327689, 0, 65537, 327690, 0, 0, 327691, 0, 65537, 327692, 0, 1, 327693, 0, 1, 327694, 0, 65537, 327695, 0, 0, 327696, 0, 1, 327697, 0, 1, 327698, 0, 0, 458746, 0, 0, 458747, 0, 65537, 458748, 0, 0, 458749, 0, 1, 458750, 0, 65536, 458751, 0, 0, 393216, 0, 1, 393217, 0, 65537, 393218, 0, 0, 393219, 0, 0, 393220, 0, 1, 393221, 0, 65537, 393222, 0, 65537, 393223, 0, 65537, 393224, 0, 1, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 65537, 393230, 0, 1, 393231, 0, 0, 393232, 0, 65537, 393233, 0, 65536, 393234, 0, 0, 524282, 0, 0, 524283, 0, 65537, 524284, 0, 0, 524285, 0, 65536, 524286, 0, 0, 524287, 0, 65536, 458752, 0, 1, 458753, 0, 1, 458754, 0, 1, 458755, 0, 65536, 458756, 0, 65537, 458757, 0, 1, 458758, 0, 1, 458759, 0, 1, 458760, 0, 65537, 458761, 0, 1, 458762, 0, 65536, 458763, 0, 65537, 458764, 0, 65537, 458765, 0, 65536, 458766, 0, 65537, 458767, 0, 65536, 458768, 0, 1, 458769, 0, 0, 458770, 0, 0, 589818, 0, 0, 589819, 0, 65537, 589820, 0, 0, 589821, 0, 65536, 589822, 0, 1, 589823, 0, 65537, 524288, 0, 65537, 524289, 0, 65537, 524290, 0, 65536, 524291, 0, 0, 524292, 0, 65536, 524293, 0, 65537, 524294, 0, 1, 524295, 0, 65536, 524296, 0, 65537, 524297, 0, 65537, 524298, 0, 1, 524299, 0, 65536, 524300, 0, 65537, 524301, 0, 0, 524302, 0, 65536, 524303, 0, 65536, 524304, 0, 65536, 524305, 0, 0, 524306, 0, 0, 655354, 0, 0, 655355, 0, 1, 655356, 0, 65537, 655357, 0, 1, 655358, 0, 0, 655359, 0, 0, 589824, 0, 1, 589825, 0, 65536, 589826, 0, 65536, 589827, 0, 0, 589828, 0, 1, 589829, 0, 65537, 589830, 0, 0, 589831, 0, 65537, 589832, 0, 65537, 589833, 0, 0, 589834, 0, 1, 589835, 0, 0, 589836, 0, 65536, 589837, 0, 65536, 589838, 0, 0, 589839, 0, 65536, 589840, 0, 1, 589841, 0, 1, 589842, 0, 0, 720890, 0, 0, 720891, 0, 1, 720892, 0, 65536, 720893, 0, 1, 720894, 0, 65536, 720895, 0, 0, 655360, 0, 1, 655361, 0, 0, 655362, 0, 65536, 655363, 0, 65536, 655364, 0, 0, 655365, 0, 65537, 655366, 0, 65537, 655367, 0, 1, 655368, 0, 65536, 655369, 0, 0, 655370, 0, 1, 655371, 0, 65536, 655372, 0, 65537, 655373, 0, 65536, 655374, 0, 65537, 655375, 0, 65537, 655376, 0, 1, 655377, 0, 65537, 655378, 0, 0, 786426, 0, 0, 786427, 0, 1, 786428, 0, 65537, 786429, 0, 0, 786430, 0, 65537, 786431, 0, 65536, 720896, 0, 65536, 720897, 0, 1, 720898, 0, 65536, 720899, 0, 65536, 720900, 0, 65537, 720901, 0, 1, 720902, 0, 1, 720903, 0, 1, 720904, 0, 65537, 720905, 0, 1, 720906, 0, 65537, 720907, 0, 1, 720908, 0, 65536, 720909, 0, 65536, 720910, 0, 65537, 720911, 0, 65537, 720912, 0, 65536, 720913, 0, 1, 720914, 0, 0, 851962, 0, 0, 851963, 0, 0, 851964, 0, 0, 851965, 0, 0, 851966, 0, 0, 851967, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Camera2D" type="Camera2D" parent="."]
rotating = true
current = true
zoom = Vector2( 0.8, 0.8 )

[node name="AnimBG" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/out = SubResource( 7 )
anims/start = SubResource( 3 )

[node name="Anim" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 9 )
anims/out = SubResource( 10 )
anims/start = SubResource( 11 )

[node name="AudioMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true
bus = "music"

[connection signal="pressed" from="CanvasLayer/MainMenu/HBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="CanvasLayer/LevelSelectMenu/Margin/BackButton" to="." method="_on_LevelBackButton_pressed"]
[connection signal="pressed" from="CanvasLayer/LevelSelectMenu/Margin2/PlayButton" to="." method="_on_PlayLevelButton_pressed"]
[connection signal="item_selected" from="CanvasLayer/MarginContainer/LangOption" to="." method="_on_LangOption_item_selected"]

[editable path="CanvasLayer/MainMenu"]
[editable path="CanvasLayer/LevelSelectMenu"]
